# search-workshop

./: .gitignore  1-load-flights.sh  2-load-contracts.sh  3-start-website.sh  AGENTS.md  README.md  mappings-contracts.json  sample-flight.json
cli-dotnet/: ContractLoader.cs  ContractsLogging.cs  ContractsProgram.cs  ElasticsearchClientWrapper.cs  FlightLoader.cs  ImportContracts.csproj  ImportFlights.csproj  LookupClasses.cs  Program.cs  README.md
cli-go/: README.md  go.mod  go.sum  import_contracts.go  main.go  main_contracts.go  main_flights.go
cli-java/: README.md  dependency-reduced-pom.xml  pom.xml
cli-js/: README.md  import_contracts.js  import_flights.js  package-lock.json  package.json
cli-php/: README.md  composer.json  import_contracts.php  import_flights.php
cli-python/: count_flights.py  import_contracts.py  import_flights.py  index_pdf.py  requirements.txt
cli-ruby/: Gemfile  README.md  extract_fields.rb  import_aircraft.rb  import_airlines.rb  import_airports.rb  import_cancellations.rb  import_contracts.rb  import_flights.rb  validate_csv.rb
cli-rust/: Cargo.toml  README.md
cli-rust/src/: import_contracts.rs  main.rs
config/: elasticsearch.sample.yml  elasticsearch.yml  fields-flights.json  mappings-aircraft.json  mappings-airlines.json  mappings-airports.json  mappings-flights.json  pipeline-contracts.json
contracts/: DEPLOYMENT.md  check_pdf.py  example_queries.py  import_contracts.py  index_pdf.py  inspect_chunks.py  requirements.txt  setup_index.py  setup_pipeline.py
data/: sample-aircraft.json  sample-airline.json  (+2 more)
(+38 files in other folders)
