[package]
name = "import-flights"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "import_flights"
path = "src/main.rs"

[dependencies]
elasticsearch = { version = "8.19.0-alpha.1", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
flate2 = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
glob = "0.3"
